fix: product comment - fix missing text counter on safari

--- a/src/components/mobile/Input/input.scss
+++ b/src/components/mobile/Input/input.scss
@@ -106,6 +106,7 @@ textarea {
   padding-left: 0px;
   padding-bottom: 1px;
   top: 0px;
+  z-index: 1;
 }
 
 .label, .hint, .textCounter {
